# zfmt

./: BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  PLAN.md  README.md  SPEC.md
zfmt/: BUILD.bazel  Cargo.toml
zfmt-host/: Cargo.toml
zfmt-host/src/: db.rs  decode.rs  elf.rs  export.rs  interpret.rs  lib.rs  main.rs
zfmt-host/tests/: cli.rs  integration.rs  pipeline.rs
zfmt-macro/: BUILD.bazel  Cargo.toml
zfmt-macro/src/: bytecode.rs  codegen.rs  enum_derive.rs  fmtstr.rs  format_into.rs  hash.rs  lib.rs  log_text.rs  parse.rs  tier1.rs  tier2.rs
zfmt-testfw/: Cargo.toml
zfmt-testfw/src/: main.rs
zfmt/src/: events.rs  format.rs  leb128.rs  lib.rs  logger.rs  macros.rs  output.rs  write.rs
zfmt/tests/: duplicate_format.rs  enum_events.rs  events.rs  format_into.rs  nested.rs  tier1.rs  tier2.rs  unstructured.rs  zfmt_str_field.rs
