# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

module(
    name = "zfmt",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.70.0")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "zfmt_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//zfmt-macro:Cargo.toml"],
    supported_platform_triples = [
        # Host platforms
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
use_repo(crate, "zfmt_crates")
