[package]
name = "zfmt"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
zfmt-macro = { path = "../zfmt-macro" }

[features]
no-float  = ["zfmt-macro/no-float"]
no-64bit  = ["zfmt-macro/no-64bit"]

# Minimum severity level emitted (default: info).
# Each level implies all levels above it.
default = ["log-level-info"]
log-level-trace = ["log-level-debug"]
log-level-debug = ["log-level-info"]
log-level-info  = ["log-level-warn"]
log-level-warn  = ["log-level-error"]
log-level-error = []

# Output mode (default: binary)
output-binary = []
output-text   = []
output-both   = []
